--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,8 @@ span.bold{
 }
 
 
-.landing__pg__btn__grp button{
+.landing__pg__btn__grp button,
+.chat__send__btn,.chat__close__btn{
     width:199px;
     height:48px;
     margin-right:20px;
@@ -99,24 +100,36 @@ span.bold{
     position: relative;
 }
 
-.landing__pg__btn__grp button svg{
+.landing__pg__btn__grp button svg,
+.chat__send__btn svg{
     position: absolute;
     right:20px;
     top:15px
 }
 
-.landing__pg__btn__grp button:first-child{
+.landing__pg__btn__grp button:first-child,
+.chat__send__btn{
     background-color:transparent;
     border:2px solid #0d6efd;
     color:#0d6efd;
     font-weight: 700;
 }
 
-.landing__pg__btn__grp button:nth-child(2){
+.landing__pg__btn__grp button:nth-child(2),
+.chat__close__btn{
     background-color:#0d6efd;
     color:#fff;
     font-weight: 700;
     border:none;
+}
+
+.chat__close__btn,.chat__send__btn{
+    margin:auto;
+    padding-right: 0;
+}
+
+.chat__send__btn{
+    margin-bottom:10px;
 }
 
 span.blue__dot{
@@ -330,6 +343,12 @@ p.features{
     border: 2.5px solid white;
     border-radius: .5rem;
     padding-inline: 2.5rem;
+}
+
+.btn-close{
+    position: absolute;
+    right:10px;
+    top:10px;
 }
 
 .soycle{
