fixed signup button on sign-in form

--- a/css/chat.css
+++ b/css/chat.css
@@ -1,19 +1,9 @@
-/* Button used to open the chat form - fixed at the bottom of the page */
-.open-button {
-    background-color: #555;
-    color: white;
-    padding: 16px 20px;
-    border: none;
-    cursor: pointer;
-    opacity: 0.8;
-    position: fixed;
-    bottom: 23px;
-    right: 28px;
-    width: 280px;
-  }
-  
-  /* The popup chat - hidden by default */
-  .chat-popup {
+.modal-dialog{
+    margin-top:80px;
+}
+
+/* The popup chat - hidden by default */
+    .chat-popup {
     display: none;
     position: fixed;
     bottom: 0;
@@ -57,15 +47,5 @@
   .form-container textarea:focus {
     background-color: #ddd;
     outline: none;
-  }
-  
-  /* Set a style for the submit/send button */
-  
-  
-  /* Add a red background color to the cancel button */
-  
-  /* Add some hover effects to buttons */
-  .form-container .btn:hover, .open-button:hover {
-    opacity: 1;
   }
  
