modal css and pull

--- a/css/style.css
+++ b/css/style.css
@@ -700,3 +700,11 @@ li{
 .my-3 button{
     padding-top:10px;
 }
+
+.modal-content{
+    flex-direction: row !important;
+    width:900px;
+    align-items: center;
+    justify-content: center;
+    padding-bottom:30px;
+}
