--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ body p{
 }
 
 .container.main{
-    margin:75px auto;
+    margin:auto;
+    margin-top:175px;
     justify-content: center;
     max-width: 1100px;
 }
@@ -29,6 +30,10 @@ body p{
     border-bottom:2px solid #d9d9d9;
     bottom:0;
     left:195px
+}
+
+.navbar{
+    background-color: #fff;
 }
 
 .nav-link{
