--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ body p{
     padding:5px 20px;
     margin-right:30px;
     margin-left:10px;
+    height:40px;
 }
 
 /* =========  LANDING PAGE LEFT COLUMN ========= */
@@ -867,6 +868,11 @@ li{
     left: .5rem;
 }
 
+#chat-modal h1{
+    color:#0D6EFD;
+    text-shadow: 2px 2px 4px #000;
+}
+
 .my-3 button{
     padding-top:10px;
 }
@@ -920,6 +926,10 @@ li{
     position:absolute;
     right:28px;
     top:18px;
+}
+
+footer{
+    margin-top:55px;
 }
 
 .footer__btn__grp button:nth-child(2) svg{
